fix table wording

--- a/shipment/templates/shipment.html
+++ b/shipment/templates/shipment.html
@@ -23,7 +23,7 @@
                         <td>
                             <p>{{ item.product_variation.product.name }}</p>
                             <pre>
-{{ item.product_variation.product.name }}
+{{ item.product_variation.product.description }}
                     </pre>
                         </td>
                         <td> {{ item.quantity }}</td>
