fix table header

--- a/shipment/templates/shipment_list.html
+++ b/shipment/templates/shipment_list.html
@@ -32,7 +32,7 @@
 <table id="shipment">
     <thead>
     <tr>
-        <th id="check"></th>
+        <th id="check">เลือกพิมพ์</th>
         <th id="no">ลำดับ</th>
         <th id="patient">คนไข้</th>
         <th id="orderdate">วันที่สั่ง</th>
