--- a/shipment/templates/shipment_list.html
+++ b/shipment/templates/shipment_list.html
@@ -29,7 +29,7 @@
     <input id="all" type="button" value="All"/>
     <input id="none" type="button" value="None"/>
 </div>
-<table id="shipment">
+<table id="shipment" aria-label="item list">
     <thead>
     <tr>
         <th id="check">เลือกพิมพ์</th>
