--- a/shipment/templates/shipping_label.html
+++ b/shipment/templates/shipping_label.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="th">
 <head>
     <meta charset="utf-8">
     <title>ไทยรอด Label</title>
@@ -8,7 +9,7 @@
             size: A4 landscape;
         }
     </style>
-    <style type="text/css">
+    <style>
         table.productlist, tr, th, td {
             border: 2px solid gray;
             border-collapse:collapse;
